# deepthink

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  package.json  pyproject.toml
apps/backend/: config.py  llm_provider.py  llm_service.py  main.py  models.py  routes.py  s3_service.py
apps/backend/prompts/: evaluate_answer_system.md  evaluate_answer_user.md  generate_questions_system.md  generate_questions_user.md
apps/backend/tests/: conftest.py  test_llm_service.py  test_models.py  test_routes.py
apps/web/app/: layout.tsx  page.tsx
apps/web/app/new/: page.tsx
apps/web/app/trees/[id]/: page.tsx
apps/web/components/: answer-form.tsx  question-block-view.tsx  title-block-view.tsx
apps/web/lib/: api.ts
